<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".connInscript.forminscript1">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </android.support.design.widget.AppBarLayout>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:padding="10dp"
    >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/label"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:paddingTop="10dp"
        android:src="@drawable/wazaby"
        android:layout_centerHorizontal="true"
        />

    <View
        android:id="@+id/view1"
        android:layout_below="@+id/label"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimary"
        />

    <RelativeLayout
        android:id="@+id/block"
        android:layout_below="@+id/view1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="10dp"
        >



        <LinearLayout
            android:id="@+id/email_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_mail_black_36dp"
                android:layout_gravity="center"
                android:tint="@color/colorPrimary"
                />



            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:layout_gravity="center"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/password_block"
            android:layout_below="@+id/email_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_lock_black_36dp"
                android:tint="@color/colorPrimary"
                android:layout_gravity="center"
                />



            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                />


        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/connexion"
            android:layout_below="@+id/password_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connexion"
            android:background="@color/colorPrimary"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            />



    </RelativeLayout>



    <View
        android:id="@+id/view2"
        android:layout_below="@+id/block"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimary"
        android:layout_marginTop="10dp"
        />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/passforget"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/view2"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/passforget"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:textColor="@color/colorPrimary"
        />


    <LinearLayout
        android:id="@+id/aboutblock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_help_black_18dp"
            android:tint="@color/colorPrimary"
            />

        <TextView
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textColor="@color/colorPrimary"
            />
    </LinearLayout>

</RelativeLayout>
</RelativeLayout>
</android.support.design.widget.CoordinatorLayout>